# bulk-desensitizer

./: .gitignore  README.md  docker-compose.yml  sample_data.xlsx
backend/: Dockerfile  celery_app.py  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py  worker.py
backend/tests/: test_cancel.py  test_split_feature.py
frontend/: .dockerignore  .npmrc  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/components/: RulesCard.vue  StatsCards.vue
